--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="uz">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./rentcar-kokand.png" />
+    <link rel="icon" href="./rentcar-kokand.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
