nginx bug-fixing

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./rentcar-kokand.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
-    <!-- Primary Meta Tags -->
     <title>RentCar Kokand – Avtomobil ijarasi xizmatlari</title>
     <meta
       name="title"
@@ -27,8 +25,6 @@
     <meta name="geo.placename" content="Kokand" />
     <meta name="geo.position" content="40.5289;70.9421" />
     <meta name="ICBM" content="40.5289, 70.9421" />
-
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rentcar-kokand.uz/" />
     <meta
@@ -47,8 +43,6 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="RentCar Kokand" />
     <meta property="og:locale" content="uz_UZ" />
-
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://rentcar-kokand.uz/" />
     <meta
@@ -63,8 +57,6 @@
       property="twitter:image"
       content="https://rentcar-kokand.uz/og-image.jpg"
     />
-
-    <!-- Preload Critical Resources -->
     <link
       rel="preload"
       href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
@@ -75,15 +67,9 @@
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
       as="style"
     />
-
-    <!-- DNS Prefetch -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
     <link rel="dns-prefetch" href="//www.googletagmanager.com" />
-
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://rentcar-kokand.uz/" />
-
-    <!-- Alternate languages -->
     <link rel="alternate" hreflang="uz" href="https://rentcar-kokand.uz/" />
     <link rel="alternate" hreflang="ru" href="https://rentcar-kokand.uz/ru/" />
     <link
@@ -91,20 +77,14 @@
       hreflang="x-default"
       href="https://rentcar-kokand.uz/"
     />
-
-    <!-- AOS CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
     />
-
-    <!-- Flowbite CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
       rel="stylesheet"
     />
-
-    <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -112,78 +92,67 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-
-    <!-- Humans.txt -->
     <link rel="author" href="/humans.txt" />
-
-    <!-- Google Analytics GA4 -->
-
-    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-KM1D7H55HC"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-
-      gtag("config", "G-KM1D7H55HC");
+      (window.dataLayer = window.dataLayer || []),
+        gtag("js", new Date()),
+        gtag("config", "G-KM1D7H55HC");
     </script>
-
-    <!-- Structured Data - LocalBusiness -->
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org/",
-        "@type": "LocalBusiness",
-        "@id": "https://rentcar-kokand.uz/#business",
-        "name": "RentCar Kokand",
-        "image": "https://rentcar-kokand.uz/og-image.jpg",
-        "description": "Farg'ona vodiysida tez va oson avtomobil ijarasi. Arzon narxlar, qulay xizmat va keng avtomobil tanlovi.",
-        "url": "https://rentcar-kokand.uz/",
-        "telephone": "+998-90-150-26-57",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Kokand shahar",
-          "addressLocality": "Kokand",
-          "addressRegion": "Farg'ona viloyati",
-          "addressCountry": "UZ"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 40.5289,
-          "longitude": 70.9421
-        },
-        "openingHours": "Mo-Su 08:00-20:00",
-        "priceRange": "$$",
-        "servesCuisine": [],
-        "paymentAccepted": "Cash, Credit Card, Bank Transfer",
-        "currenciesAccepted": "UZS",
-        "hasOfferCatalog": {
-          "@type": "OfferCatalog",
-          "name": "Avtomobil ijarasi xizmatlari",
-          "itemListElement": [
-            {
-              "@type": "Offer",
-              "itemOffered": {
-                "@type": "Service",
-                "name": "Chevrolet Cobalt ijarasi",
-                "description": "Kunlik avtomobil ijarasi xizmati"
+              "@context": "https://schema.org/",
+              "@type": "LocalBusiness",
+              "@id": "https://rentcar-kokand.uz/#business",
+              "name": "RentCar Kokand",
+              "image": "https://rentcar-kokand.uz/og-image.jpg",
+              "description": "Farg'ona vodiysida tez va oson avtomobil ijarasi. Arzon narxlar, qulay xizmat va keng avtomobil tanlovi.",
+              "url": "https://rentcar-kokand.uz/",
+              "telephone": "+998-90-150-26-57",
+              "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Kokand shahar",
+                "addressLocality": "Kokand",
+                "addressRegion": "Farg'ona viloyati",
+                "addressCountry": "UZ"
+              },
+              "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 40.5289,
+                "longitude": 70.9421
+              },
+              "openingHours": "Mo-Su 08:00-20:00",
+              "priceRange": "$$",
+              "servesCuisine": [],
+              "paymentAccepted": "Cash, Credit Card, Bank Transfer",
+              "currenciesAccepted": "UZS",
+              "hasOfferCatalog": {ƒ
+                "@type": "OfferCatalog",
+                "name": "Avtomobil ijarasi xizmatlari",
+                "itemListElement": [
+                  {
+                    "@type": "Offer",
+                    "itemOffered": {
+                      "@type": "Service",
+                      "name": "Chevrolet Cobalt ijarasi",
+                      "description": "Kunlik avtomobil ijarasi xizmati"
+                    }
+                  }
+                ]
+              },
+              "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "4.8",
+                "reviewCount": "127"
               }
             }
-          ]
-        },
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "4.8",
-          "reviewCount": "127"
-        }
-      }
     </script>
-
-    <!-- Structured Data - WebSite -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org/",
@@ -204,47 +173,40 @@
         ]
       }
     </script>
-
-    <!-- Performance Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <!-- Critical CSS (inline) -->
     <style>
-      /* Critical CSS - Loading Animation */
       @keyframes spin {
         0% {
-          transform: rotate(0deg);
+          transform: rotate(0);
         }
         100% {
           transform: rotate(360deg);
         }
       }
-
-      /* Above-the-fold styles */
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #ffffff;
+        background-color: #fff;
       }
-
       .hero-section {
         min-height: 100vh;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: linear-gradient(135deg, #667eea 0, #764ba2 100%);
         display: flex;
         align-items: center;
         justify-content: center;
-        color: white;
+        color: #fff;
         text-align: center;
       }
     </style>
+    <script defer="defer" src="/static/js/main.a5dd9887.js"></script>
+    <link href="/static/css/main.81f36e0f.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Enhanced NoScript content -->
-    <noscript>
-      <div
+    <noscript
+      ><div
         style="
           text-align: center;
           padding: 50px;
@@ -254,7 +216,7 @@
         "
       >
         <h1 style="color: #333; margin-bottom: 20px">🚗 RentCar Kokand</h1>
-        <h2 style="color: #666; font-weight: normal">
+        <h2 style="color: #666; font-weight: 400">
           Avtomobil ijarasi xizmatlari
         </h2>
         <p style="line-height: 1.6; color: #555">
@@ -285,12 +247,9 @@
           <strong>Diqqat!</strong> Saytning to'liq funksionalligini ishlatish
           uchun JavaScript yoqilgan bo'lishi kerak.
         </div>
-      </div>
-    </noscript>
-
+      </div></noscript
+    >
     <div id="root"></div>
-
-    <!-- Loading Spinner with better UX -->
     <div
       id="preloader"
       style="
@@ -299,7 +258,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: linear-gradient(135deg, #667eea 0, #764ba2 100%);
         z-index: 9999;
         display: flex;
         align-items: center;
@@ -318,7 +277,7 @@
           margin-bottom: 20px;
         "
       ></div>
-      <p style="color: white; font-size: 18px; margin: 0">🚗 RentCar Kokand</p>
+      <p style="color: #fff; font-size: 18px; margin: 0">🚗 RentCar Kokand</p>
       <p
         style="
           color: rgba(255, 255, 255, 0.8);
@@ -329,96 +288,65 @@
         Yuklanmoqda...
       </p>
     </div>
-
-    <!-- Scripts with better loading -->
     <script>
-      // Preloader with timeout fallback
       window.addEventListener("load", () => {
-        const preloader = document.getElementById("preloader");
-        if (preloader) {
-          preloader.style.opacity = "0";
-          preloader.style.transition = "opacity 0.5s ease";
+        const e = document.getElementById("preloader");
+        e &&
+          ((e.style.opacity = "0"),
+          (e.style.transition = "opacity 0.5s ease"),
           setTimeout(() => {
-            preloader.style.display = "none";
-          }, 500);
-        }
-      });
-
-      // Fallback timeout
-      setTimeout(() => {
-        const preloader = document.getElementById("preloader");
-        if (preloader) {
-          preloader.style.display = "none";
-        }
-      }, 10000);
+            e.style.display = "none";
+          }, 500));
+      }),
+        setTimeout(() => {
+          const e = document.getElementById("preloader");
+          e && (e.style.display = "none");
+        }, 1e4);
     </script>
-
-    <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <!-- Typewriter Effect -->
     <script src="https://cdn.jsdelivr.net/npm/typewriter-effect@2.18.0/dist/core.min.js"></script>
-
-    <!-- Welcome Modal with better UX -->
     <script>
-      // Check if user has seen welcome modal recently
-      const hasSeenWelcome = localStorage.getItem("welcomeShown");
-      const lastShown = localStorage.getItem("welcomeLastShown");
-      const now = new Date().getTime();
-      const oneDayAgo = now - 24 * 60 * 60 * 1000;
-
-      if (!hasSeenWelcome || (lastShown && parseInt(lastShown) < oneDayAgo)) {
+      const hasSeenWelcome = localStorage.getItem("welcomeShown"),
+        lastShown = localStorage.getItem("welcomeLastShown"),
+        now = new Date().getTime(),
+        oneDayAgo = now - 864e5;
+      (!hasSeenWelcome || (lastShown && parseInt(lastShown) < oneDayAgo)) &&
         setTimeout(() => {
           Swal.fire({
             title: "👋 Xush kelibsiz!",
-            html: `<div id="typewriter" style="font-weight: 500; font-size: 18px; margin-top: 10px; min-height: 60px;"></div>`,
-            showConfirmButton: true,
+            html: '<div id="typewriter" style="font-weight: 500; font-size: 18px; margin-top: 10px; min-height: 60px;"></div>',
+            showConfirmButton: !0,
             confirmButtonText: "Boshlash",
-            showCancelButton: true,
+            showCancelButton: !0,
             cancelButtonText: "Yopish",
             width: 500,
-            customClass: {
-              popup: "animated fadeInUp"
-            },
+            customClass: { popup: "animated fadeInUp" },
             didOpen: () => {
-              const typewriter = new Typewriter(
-                document.getElementById("typewriter"),
-                {
-                  loop: true,
-                  delay: 75,
-                  deleteSpeed: 50
-                }
-              );
-
-              typewriter
+              new Typewriter(document.getElementById("typewriter"), {
+                loop: !0,
+                delay: 75,
+                deleteSpeed: 50,
+              })
                 .typeString("Yangi mashinalar keldi faqat bugun -40% 🚗")
-                .pauseFor(2000)
+                .pauseFor(2e3)
                 .deleteAll()
                 .typeString("Bugungi aksiyalardan foydalaning 🎁")
-                .pauseFor(2000)
+                .pauseFor(2e3)
                 .deleteAll()
                 .typeString("Faol bo'ling — cheklangan takliflar! ⚡")
-                .pauseFor(2000)
+                .pauseFor(2e3)
                 .start();
+            },
+          }).then((e) => {
+            if (e.isConfirmed) {
+              const e = document.getElementById("cars-section");
+              e && e.scrollIntoView({ behavior: "smooth" });
             }
-          }).then((result) => {
-            if (result.isConfirmed) {
-              // User clicked start - maybe scroll to cars section
-              const carsSection = document.getElementById("cars-section");
-              if (carsSection) {
-                carsSection.scrollIntoView({ behavior: "smooth" });
-              }
-            }
-          });
-
-          // Mark as shown
-          localStorage.setItem("welcomeShown", "true");
-          localStorage.setItem("welcomeLastShown", now.toString());
-        }, 2000);
-      }
+          }),
+            localStorage.setItem("welcomeShown", "true"),
+            localStorage.setItem("welcomeLastShown", now.toString());
+        }, 2e3);
     </script>
-
-    <!-- Confetti Animation -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script>
       setTimeout(() => {
@@ -426,49 +354,78 @@
           particleCount: 100,
           spread: 70,
           origin: { y: 0.6 },
-          colors: ["#667eea", "#764ba2", "#f093fb", "#f5576c"]
+          colors: ["#667eea", "#764ba2", "#f093fb", "#f5576c"],
         });
       }, 2500);
     </script>
-
-    <!-- AOS Animation -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         AOS.init({
-          duration: 1000,
-          once: true,
+          duration: 1e3,
+          once: !0,
           offset: 100,
-          easing: "ease-in-out"
+          easing: "ease-in-out",
         });
       });
     </script>
-
-    <!-- Flowbite JS -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-
-    <!-- Performance Monitoring -->
     <script>
-      // Web Vitals tracking
-      function sendToAnalytics(metric) {
-        gtag("event", metric.name, {
-          value: Math.round(
-            metric.name === "CLS" ? metric.value * 1000 : metric.value
-          ),
+      function sendToAnalytics(e) {
+        gtag("event", e.name, {
+          value: Math.round("CLS" === e.name ? 1e3 * e.value : e.value),
           event_category: "Web Vitals",
-          event_label: metric.id,
-          non_interaction: true
+          event_label: e.id,
+          non_interaction: !0,
         });
       }
-
-      // Simple performance tracking
       window.addEventListener("load", () => {
-        const loadTime = performance.now();
+        const e = performance.now();
         gtag("event", "page_load_time", {
-          value: Math.round(loadTime),
-          event_category: "Performance"
+          value: Math.round(e),
+          event_category: "Performance",
         });
       });
+    </script>
+    <script>
+      async function monitorApi(url, threshold = 500) {
+        const start = performance.now();
+
+        try {
+          const res = await fetch(url);
+          const duration = performance.now() - start;
+
+          if (!res.ok || duration > threshold) {
+            notify(
+              `⚠️ API sekinlashdi: ${duration.toFixed(0)} ms | URL: ${url}`
+            );
+          }
+        } catch (e) {
+          notify(`❌ API ishlamayapti: ${url}`);
+        }
+      }
+
+      function notify(msg) {
+        console.warn(msg);
+
+        // Telegram log (xohlasang backendga yubor)
+        fetch(
+          "https://api.telegram.org/bot{8070117237:AAHVkDVQLv1Zg8M_57mwk7sXwQlIDpQIk7I}/sendMessage",
+          {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              chat_id: "{-1002689421547}",
+              text: msg,
+            }),
+          }
+        );
+      }
+
+      // Har 10 soniyada tekshirish
+      setInterval(() => {
+        monitorApi("/api/health");
+      }, 10000);
     </script>
   </body>
 </html>
