--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="./rentcar-kokand.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>RentCar Kokand – Avtomobil ijarasi xizmatlari</title>
+    <title>Ziyo Rent Car – Avtomobil ijarasi xizmatlari</title>
     <meta
       name="title"
-      content="RentCar Kokand – Avtomobil ijarasi xizmatlari"
+      content="Ziyo Rent Car – Avtomobil ijarasi xizmatlari"
     />
     <meta
       name="description"
@@ -18,7 +18,7 @@
       name="keywords"
       content="Rent car, Kokand, Farg'ona, Avtomobil ijarasi, Arzon mashina ijarasi, ijaraga mashina olish"
     />
-    <meta name="author" content="RentCar Kokand Team" />
+    <meta name="author" content="Ziyo Rent Car Team" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="uz" />
     <meta name="geo.region" content="UZ-FA" />
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://rentcar-kokand.uz/" />
     <meta
       property="og:title"
-      content="RentCar Kokand – Avtomobil ijarasi xizmatlari"
+      content="Ziyo Rent Car – Avtomobil ijarasi xizmatlari"
     />
     <meta
       property="og:description"
@@ -41,13 +41,13 @@
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:site_name" content="RentCar Kokand" />
+    <meta property="og:site_name" content="Ziyo Rent Car" />
     <meta property="og:locale" content="uz_UZ" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://rentcar-kokand.uz/" />
     <meta
       property="twitter:title"
-      content="RentCar Kokand – Avtomobil ijarasi xizmatlari"
+      content="Ziyo Rent Car – Avtomobil ijarasi xizmatlari"
     />
     <meta
       property="twitter:description"
@@ -88,7 +88,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
@@ -110,7 +110,7 @@
               "@context": "https://schema.org/",
               "@type": "LocalBusiness",
               "@id": "https://rentcar-kokand.uz/#business",
-              "name": "RentCar Kokand",
+              "name": "Ziyo Rent Car",
               "image": "https://rentcar-kokand.uz/og-image.jpg",
               "description": "Farg'ona vodiysida tez va oson avtomobil ijarasi. Arzon narxlar, qulay xizmat va keng avtomobil tanlovi.",
               "url": "https://rentcar-kokand.uz/",
@@ -132,7 +132,7 @@
               "servesCuisine": [],
               "paymentAccepted": "Cash, Credit Card, Bank Transfer",
               "currenciesAccepted": "UZS",
-              "hasOfferCatalog": {ƒ
+              "hasOfferCatalog": {
                 "@type": "OfferCatalog",
                 "name": "Avtomobil ijarasi xizmatlari",
                 "itemListElement": [
@@ -159,7 +159,7 @@
         "@type": "WebSite",
         "@id": "https://rentcar-kokand.uz/#website",
         "url": "https://rentcar-kokand.uz/",
-        "name": "RentCar Kokand",
+        "name": "Ziyo Rent Car",
         "description": "Farg'ona vodiysida tez va oson avtomobil ijarasi",
         "potentialAction": [
           {
@@ -176,14 +176,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <style>
-      @keyframes spin {
-        0% {
-          transform: rotate(0);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           sans-serif;
@@ -191,18 +183,7 @@
         padding: 0;
         background-color: #fff;
       }
-      .hero-section {
-        min-height: 100vh;
-        background: linear-gradient(135deg, #667eea 0, #764ba2 100%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #fff;
-        text-align: center;
-      }
     </style>
-    <script defer="defer" src="/static/js/main.a5dd9887.js"></script>
-    <link href="/static/css/main.81f36e0f.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
@@ -215,7 +196,7 @@
           font-family: Arial, sans-serif;
         "
       >
-        <h1 style="color: #333; margin-bottom: 20px">🚗 RentCar Kokand</h1>
+        <h1 style="color: #333; margin-bottom: 20px">🚗 Ziyo Rent Car</h1>
         <h2 style="color: #666; font-weight: 400">
           Avtomobil ijarasi xizmatlari
         </h2>
@@ -250,59 +231,6 @@
       </div></noscript
     >
     <div id="root"></div>
-    <div
-      id="preloader"
-      style="
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(135deg, #667eea 0, #764ba2 100%);
-        z-index: 9999;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      "
-    >
-      <div
-        style="
-          border: 4px solid rgba(255, 255, 255, 0.3);
-          border-top: 4px solid #fff;
-          border-radius: 50%;
-          width: 60px;
-          height: 60px;
-          animation: spin 1s linear infinite;
-          margin-bottom: 20px;
-        "
-      ></div>
-      <p style="color: #fff; font-size: 18px; margin: 0">🚗 RentCar Kokand</p>
-      <p
-        style="
-          color: rgba(255, 255, 255, 0.8);
-          font-size: 14px;
-          margin: 5px 0 0 0;
-        "
-      >
-        Yuklanmoqda...
-      </p>
-    </div>
-    <script>
-      window.addEventListener("load", () => {
-        const e = document.getElementById("preloader");
-        e &&
-          ((e.style.opacity = "0"),
-          (e.style.transition = "opacity 0.5s ease"),
-          setTimeout(() => {
-            e.style.display = "none";
-          }, 500));
-      }),
-        setTimeout(() => {
-          const e = document.getElementById("preloader");
-          e && (e.style.display = "none");
-        }, 1e4);
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script>
       setTimeout(() => {
@@ -343,45 +271,6 @@
         });
       });
     </script>
-    <script>
-      async function monitorApi(url, threshold = 500) {
-        const start = performance.now();
-
-        try {
-          const res = await fetch(url);
-          const duration = performance.now() - start;
-
-          if (!res.ok || duration > threshold) {
-            notify(
-              `⚠️ API sekinlashdi: ${duration.toFixed(0)} ms | URL: ${url}`
-            );
-          }
-        } catch (e) {
-          notify(`❌ API ishlamayapti: ${url}`);
-        }
-      }
-
-      function notify(msg) {
-        console.warn(msg);
-
-        // Telegram log (xohlasang backendga yubor)
-        fetch(
-          "https://api.telegram.org/bot{8070117237:AAHVkDVQLv1Zg8M_57mwk7sXwQlIDpQIk7I}/sendMessage",
-          {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              chat_id: "{-1002689421547}",
-              text: msg,
-            }),
-          }
-        );
-      }
-
-      // Har 10 soniyada tekshirish
-      setInterval(() => {
-        monitorApi("/api/health");
-      }, 10000);
-    </script>
+    <!-- NOTE: Telegram tokenni front-endga qo'ymaslik uchun eski monitoring/notify skripti olib tashlandi. -->
   </body>
 </html>
