change website logo

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="uz">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./rentcar-kokand.ico" />
+    <link rel="icon" href="./logo.jpg" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Ziyo Rent Car – Avtomobil ijarasi xizmatlari</title>
