--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./logo.jpg" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="google-adsense-account" content="ca-pub-6287366292228291" />
     <meta name="theme-color" content="#000000" />
     <title>Ziyo Rent Car – Avtomobil ijarasi xizmatlari</title>
     <meta
